fem_core/api.hpp

// =============================================================================
// api.hpp
// -----------------------------------------------------------------------------
// C-API вычислительного ядра. 12 функций, экспортируемых под extern "C"
// для вызова из Python-стороны через ctypes (модуль core_bridge.py).
//
// Все функции возвращают код результата:
//   0  — успех;
//  >0  — предупреждение (например, итерации не сошлись);
//  <0  — ошибка (некорректные аргументы, переполнение и т.п.).
//
// Соответствует таблице 3.4 пояснительной записки.
// =============================================================================

#ifndef FEM_CORE_API_HPP
#define FEM_CORE_API_HPP

#include <cstdint>

#if defined(_WIN32) || defined(__CYGWIN__)
#  ifdef FEM_CORE_BUILD
#    define FEM_API __declspec(dllexport)
#  else
#    define FEM_API __declspec(dllimport)
#  endif
#else
#  define FEM_API __attribute__((visibility("default")))
#endif

#ifdef __cplusplus
extern "C" {
#endif

// -----------------------------------------------------------------------------
// 1) Генерация структурированной сетки на параллелепипеде.
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_generate_box(
    double x_min, double x_max,
    double y_min, double y_max,
    double z_min, double z_max,
    std::int32_t nx, std::int32_t ny, std::int32_t nz);

// -----------------------------------------------------------------------------
// 2) Загрузка готовой сетки из массивов Python.
//    nodes_xyz       — n_nodes * 3 значений типа double;
//    elements        — n_elements * 4 значений типа int32 (узлы тетраэдров);
//    boundary_nodes  — n_boundary_faces * 3 значений типа int32;
//    boundary_face_ids — n_boundary_faces значений типа int32.
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_load_mesh(
    const double* nodes_xyz, std::int32_t n_nodes,
    const std::int32_t* elements, std::int32_t n_elements,
    const std::int32_t* boundary_nodes,
    const std::int32_t* boundary_face_ids,
    std::int32_t n_boundary_faces);

// -----------------------------------------------------------------------------
// 3) Запрос числа узлов сетки.
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_get_node_count(void);

// -----------------------------------------------------------------------------
// 4) Передача массива координат узлов в Python.
//    out_xyz — буфер длины 3 * n_nodes (выделяет вызывающий).
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_get_nodes(double* out_xyz);

// -----------------------------------------------------------------------------
// 5) Передача матрицы связности элементов в Python.
//    out_conn — буфер длины 4 * n_elements (выделяет вызывающий).
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_get_elements(std::int32_t* out_conn);

// -----------------------------------------------------------------------------
// 6) Задание коэффициента теплопроводности и плотности источников.
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_set_material(double lambda_val, double Q);

// -----------------------------------------------------------------------------
// 7) Задание граничного условия на одной из 6 граней параллелепипеда.
//    face_id: 0..5 (X-, X+, Y-, Y+, Z-, Z+);
//    bc_type: 1=Dirichlet, 2=Neumann, 3=Robin.
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_set_boundary_condition(
    std::int32_t face_id, std::int32_t bc_type,
    double T0, double q0, double alpha, double T_inf);

// -----------------------------------------------------------------------------
// 8) Сборка матрицы и решение СЛАУ.
//    tol      — относительная норма невязки;
//    max_iter — верхний лимит итераций.
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_solve(double tol, std::int32_t max_iter);

// -----------------------------------------------------------------------------
// 9) Получение узлового вектора температур.
//    out_T — буфер длины n_nodes.
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_get_temperature(double* out_T);

// -----------------------------------------------------------------------------
// 10) Вычисление и передача тепловых потоков (узловых).
//     out_flux — буфер длины 3 * n_nodes.
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_compute_fluxes(double* out_flux);

// -----------------------------------------------------------------------------
// 11) Получение диагностики решателя.
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_get_solver_info(
    std::int32_t* out_iterations,
    double*       out_residual,
    double*       out_time_seconds,
    std::int32_t* out_converged);

// -----------------------------------------------------------------------------
// 12) Освобождение всех ресурсов ядра. После вызова все указатели
//     становятся недействительными; для повторного использования
//     требуется вновь сгенерировать или загрузить сетку.
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_free(void);

// -----------------------------------------------------------------------------
// Дополнительная информация (не входит в 12, но полезна для GUI).
// -----------------------------------------------------------------------------
FEM_API std::int32_t fem_get_element_count(void);
FEM_API std::int32_t fem_get_boundary_face_count(void);

// =============================================================================
// Локальные источники тепла (раздел 3.3.11 ПЗ).
// =============================================================================
// Точечный источник: добавляет мощность P (Вт) к правой части в строке node_idx.
//                    Знак P: положительный — нагрев, отрицательный — отвод.
// Объёмный источник: добавляет плотность Q0 (Вт/м³) ко всем элементам, чьи
//                    центры попадают в подобласть.
//   shape: 0 = box (xmin..xmax, ymin..ymax, zmin..zmax),
//          1 = sphere (cx, cy, cz, radius).
// Параметры shape передаются в массиве params[6]:
//   box:    [xmin, ymin, zmin, xmax, ymax, zmax]
//   sphere: [cx,   cy,   cz,   radius, 0, 0]
//
// fem_clear_sources очищает оба списка (вызывайте перед каждой новой задачей).
// =============================================================================

FEM_API std::int32_t fem_clear_sources(void);

FEM_API std::int32_t fem_add_point_source(std::int32_t node_idx, double power);

FEM_API std::int32_t fem_add_volume_source(std::int32_t shape,
                                           const double* params,
                                           double Q0);

// =============================================================================
// Поузельное переопределение значений Дирихле (раздел 3.4.3 — нужно для
// верификационной задачи T3 с гладкой аналитикой; полезно также для случаев,
// когда на грани известен пространственный профиль температуры из эксперимента).
//
// fem_set_node_dirichlet(idx, value) — фиксировать значение T = value в узле idx.
//     Узел не обязан принадлежать грани с BC_DIRICHLET; функция работает
//     независимо. Несколько вызовов на один узел: побеждает последнее значение.
//
// fem_clear_node_dirichlet() — снять все поузельные переопределения.
// =============================================================================
FEM_API std::int32_t fem_set_node_dirichlet(std::int32_t node_idx, double value);
FEM_API std::int32_t fem_clear_node_dirichlet(void);

#ifdef __cplusplus
} // extern "C"
#endif

#endif // FEM_CORE_API_HPP